<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medicine Reminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Welcome">Welcome to</string>
    <string name="Start">Start</string>
    <string name="MEDCHECK">MEDCHECK</string>
    <string name="mobile">mobile</string>
    <string name="using">Using this app, you can keep up with your meds, refills, and appointments.</string>
    <string name="gain">Gain points and stay healthy. </string>
    <string name="click">Click start to signup.</string>
    <string name="reminder">What message should appear when you are reminded?</string>
    <string name="whatmeds">What meds do you take?</string>
	<string name="whenmeds">When do you take your meds?</string>
	<string name="home">Home</string>
	<string name="editmenu">Edit Menu</string>
	<string name="takeoption">Take Option</string>
	<string name="edit">Edit Menu</string>
	<string name="basicinfo">Basic Info</string>
	<string name="appointments">Appointments</string>
	<string name="reminders">Reminders</string>
	<string name="medications">Medications</string>
	<string name="refills">Refills</string>
	<string name="took">Took</string>
	<string name="nottaken">Not Taken</string>
	<string name="snooze">Snooze</string>
	<string name="pillcam">PillCam</string>
	<string />
    
</resources>