<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >


    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/home" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_marginRight="43dp"
        android:src="@drawable/Reminders" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/imageButton4"
        android:src="@drawable/Appointments" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton2"
        android:text="@string/reminders"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_below="@+id/imageButton1"
        android:text="@string/basicinfo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_marginLeft="16dp"
        android:text="@string/refills"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/ImageButton01"
        android:text="@string/medications"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton4"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/TextView01"
        android:text="@string/appointments"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton1"
        android:layout_centerHorizontal="true"
        android:text="@string/edit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/BasicInfo" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:src="@drawable/Refills" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="22dp"
        android:src="@drawable/Medications" />

</RelativeLayout>